force-app/main/default/objects/Equipment__c/Equipment__c.object-meta.xml
<CustomObject>
    <description>Items which can be provisioned to a user. (User Onboarding Demo)</description>
    <label>Equipment</label>
    <nameField>
        <displayFormat>EQ-{00000000}</displayFormat>
        <label>Equipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Equipment</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>