force-app/main/default/objects/Equipment__c/fields/Desktop_Type__c.field-meta.xml
<CustomField>
    <fullName>Desktop_Type__c</fullName>
    <description>The item that is being provisioned</description>
    <label>Desktop Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mac Pro</fullName>
            </value>
            <value>
                <fullName>Dell PC Desktop</fullName>
            </value>
            <value>
                <fullName>Linux Desktop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>