force-app/main/default/objects/Equipment__c/fields/Equipment_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Type__c</fullName>
    <formula>CASE( 
  Type__c, 
  &quot;Laptop&quot;, TEXT(Laptop_Type__c),
  &quot;Desktop&quot;, TEXT(Desktop_Type__c),
  TEXT(Phone_Type__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Equipment Type</label>
    <type>Text</type>
</CustomField>