force-app/main/default/objects/Equipment__c/fields/Laptop_Type__c.field-meta.xml
<CustomField>
    <fullName>Laptop_Type__c</fullName>
    <label>Laptop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dell Inspiron - 13&quot;</fullName>
                <default>true</default>
                <label>Dell Inspiron - 13&quot;</label>
            </value>
            <value>
                <fullName>Macbook Air - 13&quot;</fullName>
            </value>
            <value>
                <fullName>Macbook Pro - 15&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>