force-app/main/default/objects/Equipment__c/fields/Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_Type__c</fullName>
    <label>Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>iPhone Xs</fullName>
            </value>
            <value>
                <fullName>Samsung Galaxy S10</fullName>
            </value>
            <value>
                <fullName>Google Pixel 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>