force-app/main/default/objects/Equipment__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Serial number of the provisioned equipment</description>
    <externalId>true</externalId>
    <label>Serial Number</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>